--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "job-board-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "json-server --watch jobs.json --port 4000"
+    "start": "json-server jobs.json --port 4000"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
